@@ -40,6 +40,8 @@ documents those changes that are of interest to users and admins.
  -- BGQ - Handle shared blocks that need to be removed and have jobs running
     on them.  This should only happen in extreme conditions.
  -- Fix inconsistency for hostlists that have more than 1 range.
+ -- BGQ - Add mutex around recovery for the Real Time server to avoid hitting
+    DB2 so hard.
 
 * Changes in SLURM 2.4.4
 ========================
